--- a/index.html
+++ b/index.html
@@ -75,6 +75,6 @@
         </div>
     </div>
 </section>
-<script src="./animation.js"></script>
+<script src="slider.js"></script>
 </body>
 </html>
